# passkey-work

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  package.json
docs/: passkey-browser-sdk.md  passkey-registry-architecture.md  passkey-sponsorship-cost-report.md
docs/plans/: next-steps.md
docs/solana/: README.md  localnet-testing.md
programs/passkey-registry/: Cargo.toml
programs/passkey-registry/src/: lib.rs
programs/passkey-registry/tests/: passkey_registry.rs
scripts/: simulate-sponsorship-costs.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/passkey-demo/passkey/create/begin/: route.ts
src/app/api/passkey-demo/passkey/create/complete/: route.ts
src/app/api/passkey-demo/passkey/create/prepare/: route.ts
src/app/api/passkey-demo/passkey/login/begin/: route.ts
src/app/api/passkey-demo/wallet/login/: route.ts
src/features/passkey-integration-demo/: index.ts  types.ts
src/features/passkey-integration-demo/domain/: api.ts  encoding.ts  local-passkeys.ts  passkeys.ts  wallet.ts
src/features/passkey-integration-demo/server/: demo-store.ts  demo-transactions.ts  encoding.ts  http.ts
src/features/passkey-integration-demo/ui/: passkey-integration-demo.tsx
src/features/passkey-prf/: index.ts
src/features/passkey-prf/domain/: storage.ts  webauthn.ts
src/features/passkey-prf/ui/: passkey-prf-tester.tsx
src/features/passkey-smart-account/: index.ts
src/features/passkey-smart-account/domain/: addresses.ts  challenges.ts  constants.ts  instructions.ts  webauthn.ts
src/lib/magicblock/: connection.ts  constants.ts
(+1 files in other folders)
