[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }
session-keys = { version = "3.0.10", features = ["no-entrypoint"] }
solana-hash = "2.3.0"
solana-sha256-hasher = "2.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
