[package]
name = "passkey-registry"
version = "0.1.0"
description = "Compressed PDA storage for Loyal passkey authority records"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "passkey_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.23.0", features = ["anchor", "v2", "cpi-context"] }
light-sdk-types = { version = "0.23.0", features = ["v2", "cpi-context"] }

[dev-dependencies]
light-program-test = "0.23.0"
light-client = { version = "0.23.0", features = ["v2", "anchor"] }
litesvm = "0.7.1"
openssl = "0.10"
solana-secp256r1-program = "2.2.4"
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
